chore: Update auxiliary project files and configs

--- a/packages/project/.vscode/settings.json
+++ b/packages/project/.vscode/settings.json
@@ -9,4 +9,7 @@
         "*_test.py"
     ],
     "python.testing.unittestEnabled": true,
+    "python.analysis.extraPaths": ["src", "tests"],
+    "python.autoComplete.extraPaths": ["src", "tests"],
+    "cSpell.words": ["Noisify"]
 }
