--- a/packages/project/pyproject.toml
+++ b/packages/project/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Mihai Bojescu",email = "bojescu.mihai@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.14"
 dependencies = [
     "numpy (>=2.2.4,<3.0.0)",
     "matplotlib (>=3.10.1,<4.0.0)",
@@ -14,8 +14,8 @@ dependencies = [
     "pyqt5 (>=5.15.11,<6.0.0)",
     "debugpy (>=1.8.14,<2.0.0)",
     "black (>=25.1.0,<26.0.0)",
-    "torch (>=2.7.0,<3.0.0)",
-    "torchvision (>=0.22.0,<0.23.0)",
+    "torch (>=2.9.0,<3.0.0)",
+    "torchvision (>=0.24.0,<0.25.0)",
     "tqdm (>=4.67.1,<5.0.0)",
     "pandas (>=2.2.3,<3.0.0)"
 ]
@@ -26,10 +26,20 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 package-mode = false
+packages = [
+    { include = "src" },
+    { include = "scripts" },
+    { include = "tests" }
+]
+
+[tool.poetry.scripts]
+train-cnn = "scripts.train_CNN:main"
+train-dit = "scripts.train_dit:main"
+preprocess = "scripts.preprocess:main"
 
 [[tool.poetry.source]]
 name = "pytorch-rocm"
-url = "https://download.pytorch.org/whl/rocm6.3"
+url = "https://download.pytorch.org/whl/nightly/rocm6.4"
 priority = "supplemental"
 
 
@@ -39,6 +49,6 @@ url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
 priority = "supplemental"
 
 [tool.poetry.dependencies]
-torch = {source = "pytorch-rocm"}
-torchvision = {source = "pytorch-rocm"}
+torch = { url = "https://download.pytorch.org/whl/nightly/rocm6.4/torch-2.9.0.dev20250710%2Brocm6.4-cp313-cp313-manylinux_2_28_x86_64.whl", python=">=3.12,<3.14"}
+torchvision = { url = "https://download.pytorch.org/whl/nightly/rocm6.4/torchvision-0.24.0.dev20250711%2Brocm6.4-cp313-cp313-manylinux_2_28_x86_64.whl"}
 intel-extension-for-pytorch = { url = "https://pytorch-extension.intel.com/whl/intel_extension_for_pytorch-2.7.10+xpu-cp312-cp312-linux_x86_64.whl" }
